# legged_gym_wxy

./: .gitignore  README.md  requirements.txt
datasets/: pace0.txt  pace1.txt  retarget_config_lite3.py  retarget_kp_motions.py
datasets/mocap_motions_eqr/: canter0.txt  canter1.txt  canter2.txt  left_turn0.txt  left_turn1.txt  pace0.txt  pace1.txt  pace2.txt  right_turn0.txt  right_turn1.txt  trot0.txt  trot1.txt  trot2.txt
datasets/mocap_motions_lite3/: canter0.txt  canter1.txt  canter2.txt  left_turn0.txt  left_turn1.txt  pace0.txt  pace1.txt  pace2.txt  right_turn0.txt  right_turn1.txt  trot0.txt  trot1.txt  trot2.txt
legged_gym/envs/: __init__.py
legged_gym/envs/a1/: a1_config.py
legged_gym/envs/base/: base_task.py  legged_robot.py  legged_robot_config.py
legged_gym/envs/eqr/: eqr.py  eqr_amp.py  eqr_amp_config.py  eqr_config.py  eqr_handstand_config.py  eqr_skill.py
legged_gym/envs/lite3/: lite3_amp.py  lite3_amp_config.py  lite3_config.py  lite3_dreamwaq.py  lite3_dreamwaq_config.py  lite3_pie.py  (+9 more)
legged_gym/scripts/: gen_pt.py  play.py
legged_gym/utils/: __init__.py  extreme_terrain.py  gpu_memory_check.py  helpers.py  task_registry.py
resources/robots/eqr1_description/: CMakeLists.txt  README.md  package.xml
resources/robots/eqr1_description/meshes/: fl_leg_ee.STL  fl_leg_l1.STL  fl_leg_l3.STL  fr_leg_ee.STL  fr_leg_l1.STL  fr_leg_l3.STL  hl_leg_ee.STL  hl_leg_l1.STL  hl_leg_l3.STL  hr_leg_ee.STL  hr_leg_l1.STL  hr_leg_l3.STL
resources/robots/eqr1_description/urdf/: eqr1.urdf  eqr1.xml  eqr1_mjx_pos.xml  eqr1_mjx_terrain.xml  eqr1_pin.urdf
(+20 files in other folders)
